--- a/static/app/index.html
+++ b/static/app/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Test</title>
 </head>
-<body>
-boov booom
+<body id="root">
+    <script src="dist/bundle.js"></script>
 </body>
 </html>
