--- a/static/app/log_in.html
+++ b/static/app/log_in.html
@@ -4,6 +4,6 @@
     <title>VK Post Publisher</title>
 </head>
 <body id="root">
-    <script src="dist/index.bundle.js"></script>
+    <script src="dist/log_in.bundle.js"></script>
 </body>
 </html>
