Add gulp and gulp config file

--- a/static/app/main.html
+++ b/static/app/main.html
@@ -6,6 +6,9 @@
     <!-- endinject -->
 </head>
 <body id="root">
+    <div id="vk-button-container">
+        
+    </div>
     <!-- inject:js -->
     <!-- endinject -->
 </body>
