Add home page. Add flask mongo package

--- a/static/app/index.html
+++ b/static/app/index.html
@@ -5,7 +5,8 @@
     <!-- inject:css -->
     <!-- endinject -->
 </head>
-<body id="root">
+<body>
+    <div id="app"></div>
     <!-- inject:js -->
     <!-- endinject -->
 </body>
