Add rules ui grid

--- a/static/app/index.html
+++ b/static/app/index.html
@@ -4,9 +4,12 @@
     <title>VK Post Publisher</title>
     <!-- inject:css -->
     <!-- endinject -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
 </head>
 <body>
     <div id="app"></div>
+
     <!-- inject:js -->
     <!-- endinject -->
 </body>
